--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+  <style>
+    body {
+      width: 300px;
+      padding: 16px;
+      font-family: system-ui;
+    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+    input {
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      padding: 8px 16px;
+      background: linear-gradient(to right, #033042, #005c83);
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .status {
+      color: green;
+      display: none;
+    }
+  </style>
 </head>
 <body>
-    
-    Hi maang.in
+  <div class="container">
+    <h3>AZ AI Assistant Settings</h3>
+    <input type="text" id="api-key" placeholder="Enter your API key">
+    <button id="save">Save</button>
+    <div id="status" class="status">Settings saved!</div>
+  </div>
+  <script src="popup.js"></script>
 </body>
 </html>
